--- a/aac.html
+++ b/aac.html
@@ -34,58 +34,6 @@
       <div class="row"><img src="assets/images/loader.gif" width="60" alt="Loader logo" class="loader"/>
       </div>
     </div>
-    <header class="main-navigation">
-      <div class="container-fluid">
-        <div class="col-md-2"><!--a href="home.html" class="logo"><img src="assets/images/logo/logo-white.png" alt="Logo"/></a-->
-          <div id="navicon">
-            <div class="bar"></div>
-            <div class="bar"></div>
-            <div class="bar"></div>
-          </div>
-        </div>
-        <div class="col-md-10">
-          <nav>
-            <ul role="menu">
-              <li><a href="home.html">HOME</a></li>
-              <li><a href="about.html">ABOUT</a></li>
-              <li class="dropdown"><a data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" class="dropdown-toggle"> PROJECTS <span class="dropdown-icon">
-                    <svg width="10" height="7">
-                      <g></g>
-                      <line fill="none" stroke="#fdfdfd" x1="-4.54458" y1="-5.33302" x2="5.38279" y2="4.59435"></line>
-                      <line fill="none" stroke="#fdfdfd" x1="4.67324" y1="4.59752" x2="14.81695" y2="-5.54619"></line>
-                    </svg></span></a>
-                <ul class="dropdown-menu">
-                  <li><a href="corbion.html">SMART DEVICE FOR OPERATORS</a></li>
-                  <li><a href="reach.html">COOKING-AID SMART-TABLE</a></li>
-                  <li><a href="dochange.html">DASHBOARD FOR RESEARCHERS</a></li>
-                  <li><a href="eventix.html">TICKETSHOP DASHBOARD</a></li>
-                  <li><a href="aac.html">EMG-BASED AAC FOR ALS USERS</a></li>
-                  <li><a href="intel.html">MULTI-PATIENT ICU MONITOR</a></li>
-                </ul>
-              </li>
-              <li><a href="t_contact.html">CONTACT</a></li>
-            </ul>
-          </nav>
-        </div>
-        <div class="mobile-navigation vertical-middle text-center">
-          <ul role="menu" class="text-center">
-            <li><a href="home.html">HOME</a></li>
-            <li><a href="about.html">ABOUT</a></li>
-            <li><a href="projects.html" class="mobile-dropdown">PROJECTS</a>
-              <div class="content">
-                <a href="corbion.html">SMART DEVICE FOR OPERATORS</a>
-                <a href="reach.html">COOKING-AID SMART-TABLE</a>
-                <a href="dochange">DASHBOARD FOR RESEARCHERS</a>
-                <a href="eventix.html">TICKETSHOP DASHBOARD</a>
-                <a href="aac.html">EMG-BASED AAC FOR ALS USERS</a>
-                <a href="intel.html">MULTI-PATIENT ICU MONITOR</a>
-              </div>
-            </li>
-            <li><a href="contact.html">CONTACT</a></li>
-          </ul>
-        </div>
-      </div>
-    </header>
     <section style="background-image: radial-gradient(circle at 50% 50%,rgba(0,0,0,0.4),rgba(0,0,0,1.0)),url(assets/images/aac/hero.jpg" class="header-introduction-small text-center background-image">
       <div class="container vertical-middle text-center">
         <div class="row section-head section-head-white">
@@ -156,7 +104,7 @@
           </div>
       </div>
     </section>
-
+    
     <!--section class="section section-white">
       <div class="container">
         <div class="col-md-12 text-center">
@@ -196,6 +144,80 @@
           <iframe style="padding-top: 1em; padding-bottom: 2em;" class="col-sm-12" src="https://player.vimeo.com/video/244571225" width="600" height="700" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
       </div>
     </section-->
+
+    <section class="section section-black">
+      <div class="container-fluid">
+        <div class="col-md-12 text-center margin-bottom">
+            <div class="section-head">
+              <span style="font-size: 1.1em;">CHECK OTHER</span>
+              <h3 style="padding-top: 0.1em; font-size: 6.0em;">PROJECTS</p></h3>
+              <img src="assets/images/section-decor-black.png" width="60" alt="Divider"/>
+            </div>
+          </div>
+        <div class="col-md-10 col-md-offset-1">
+          <ul class="masonry-wrap">
+            <li data-os-animation="fadeIn" data-os-animation-delay="0.1s" class="col-lg-2 os-animation">
+              <div class="masonry-item background-color-1"><a href="corbion.html"><img src="assets/images/corbion/tb.jpg" alt="Portfolio-image"/>
+                  <div class="masonry-item-overlay">
+                    <div class="masonry-item-overlay-inner">
+                      <h2 style="padding-top: 3em; font-size: 1em;">Smart Device</h2>
+                    </div>
+                  </div></a></div>
+            </li>
+            <li data-os-animation="fadeIn" data-os-animation-delay="0.2s" class="col-lg-2 os-animation">
+              <div class="masonry-item background-color-2"><a href="reach.html"><img src="assets/images/b_p_reach.jpg" alt="Portfolio-image"/>
+                  <div class="masonry-item-overlay">
+                    <div class="masonry-item-overlay-inner">
+                      <h2 style="padding-top: 3em; font-size: 1em;">De Kooktafel</h2>
+                    </div>
+                  </div></a></div>
+            </li>
+            <li data-os-animation="fadeIn" data-os-animation-delay="0.2s" class="col-lg-2 os-animation">
+              <div class="masonry-item background-color-3"><a href="dochange.html"><img src="assets/images/b_p_dochange.jpg" alt="Portfolio-image"/>
+                  <div class="masonry-item-overlay">
+                    <div class="masonry-item-overlay-inner">
+                      <h2 style="padding-top: 3em; font-size: 1em;">DoChange</h2>
+                    </div>
+                  </div>
+                </a>
+              </div>
+            </li>
+            <li data-os-animation="fadeIn" data-os-animation-delay="0.3s" class="col-lg-2 os-animation">
+              <div class="masonry-item background-color-4"><a href="eventix.html"><img src="assets/images/b_p_eventix2.jpg" alt="Portfolio-image"/>
+                  <div class="masonry-item-overlay">
+                    <div class="masonry-item-overlay-inner">
+                      <h2 style="padding-top: 3em; font-size: 1em;">Alert Applet</h2>
+                    </div>
+                  </div>
+                </a>
+              </div>
+            </li>
+
+            <li data-os-animation="fadeIn" data-os-animation-delay="0.4s" class="col-lg-2 os-animation">
+              <div class="masonry-item background-color-1"><a href="aac.html"><img src="assets/images/aac/tb.jpg" alt="Portfolio-image"/>
+                  <div class="masonry-item-overlay">
+                    <div class="masonry-item-overlay-inner">
+                      <h2 style="padding-top: 3em; font-size: 1em;">AAC for people with ALS</h2>
+                    </div>
+                  </div>
+                </a>
+              </div>
+            </li>
+
+            <li data-os-animation="fadeIn" data-os-animation-delay="0.3s" class="col-lg-2 os-animation">
+              <div class="masonry-item background-color-2"><a href="intel.html"><img src="assets/images/intel/tb.jpg" alt="Portfolio-image"/>
+                  <div class="masonry-item-overlay">
+                    <div class="masonry-item-overlay-inner">
+                      <h2 style="padding-top: 3em; font-size: 1em;">Multi-patient ICU Monitor</h2>
+                    </div>
+                  </div>
+                </a>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </section>
 
     <!--footer>
       <div class="container">
