--- a/index.html
+++ b/index.html
@@ -131,85 +131,87 @@
         </div>
       </div>
     </section>
+
     <section class="section section-white">
-      <div class="container-fluid">
-        <div class="col-md-12 text-center margin-bottom">
-            <div class="section-head">
-              <span style="font-size: 1.1em;">HERE ARE SOME OF MY</span>
-              <h3 style="padding-top: 0.1em; font-size: 6.0em;">PROJECTS</p></h3>
-              <img src="assets/images/section-decor-black.png" width="60" alt="Divider"/>
+        <div class="container-fluid">
+          <div class="col-md-12 text-center margin-bottom">
+              <div class="section-head">
+                <span style="font-size: 1.1em;">HERE ARE SOME OF MY</span>
+                <h3 style="padding-top: 0.1em; font-size: 6.0em;">PROJECTS</p></h3>
+                <img src="assets/images/section-decor-black.png" width="60" alt="Divider"/>
+              </div>
             </div>
+          <div class="col-md-10 col-md-offset-1">
+            <ul class="masonry-wrap">
+              <li data-os-animation="fadeIn" data-os-animation-delay="0.1s" class="col-lg-6 os-animation">
+                <div class="masonry-item background-color-1"><a href="corbion.html"><img src="assets/images/corbion/tb.jpg" alt="Portfolio-image"/>
+                    <div class="masonry-item-overlay">
+                      <div class="masonry-item-overlay-inner">
+                        <h2>Smart Device</h2>
+                        <p>Smart-Device for factory operators</p>
+                      </div>
+                    </div></a></div>
+              </li>
+              <li data-os-animation="fadeIn" data-os-animation-delay="0.2s" class="col-lg-6 os-animation">
+                <div class="masonry-item background-color-2"><a href="reach.html"><img src="assets/images/b_p_reach.jpg" alt="Portfolio-image"/>
+                    <div class="masonry-item-overlay">
+                      <div class="masonry-item-overlay-inner">
+                        <h2>De Kooktafel</h2>
+                        <p>Cooking-aid Smart-Table</p>
+                      </div>
+                    </div></a></div>
+              </li>
+              <li data-os-animation="fadeIn" data-os-animation-delay="0.2s" class="col-lg-6 os-animation">
+                <div class="masonry-item background-color-3"><a href="dochange.html"><img src="assets/images/b_p_dochange.jpg" alt="Portfolio-image"/>
+                    <div class="masonry-item-overlay">
+                      <div class="masonry-item-overlay-inner">
+                        <h2>DoChange</h2>
+                        <p>Dashboard for Researchers</p>
+                      </div>
+                    </div>
+                  </a>
+                </div>
+              </li>
+              <li data-os-animation="fadeIn" data-os-animation-delay="0.3s" class="col-lg-6 os-animation">
+                <div class="masonry-item background-color-4"><a href="eventix.html"><img src="assets/images/b_p_eventix2.jpg" alt="Portfolio-image"/>
+                    <div class="masonry-item-overlay">
+                      <div class="masonry-item-overlay-inner">
+                        <h2>Alert Applet</h2>
+                        <p>Ticketshop Dashboard</p>
+                      </div>
+                    </div>
+                  </a>
+                </div>
+              </li>
+
+              <li data-os-animation="fadeIn" data-os-animation-delay="0.4s" class="col-lg-6 os-animation">
+                <div class="masonry-item background-color-1"><a href="aac.html"><img src="assets/images/aac/tb.jpg" alt="Portfolio-image"/>
+                    <div class="masonry-item-overlay">
+                      <div class="masonry-item-overlay-inner">
+                        <h2>AAC for people with ALS</h2>
+                        <p>EMG-based AAC for people with ALS</p>
+                      </div>
+                    </div>
+                  </a>
+                </div>
+              </li>
+
+              <li data-os-animation="fadeIn" data-os-animation-delay="0.3s" class="col-lg-6 os-animation">
+                <div class="masonry-item background-color-2"><a href="intel.html"><img src="assets/images/intel/tb.jpg" alt="Portfolio-image"/>
+                    <div class="masonry-item-overlay">
+                      <div class="masonry-item-overlay-inner">
+                        <h2>Multi-patient ICU Monitor</h2>
+                        <p>ICU monitor</p>
+                      </div>
+                    </div>
+                  </a>
+                </div>
+              </li>
+            </ul>
           </div>
-        <div class="col-md-10 col-md-offset-1">
-          <ul class="masonry-wrap">
-            <li data-os-animation="fadeIn" data-os-animation-delay="0.1s" class="col-lg-6 os-animation">
-              <div class="masonry-item background-color-1"><a href="corbion.html"><img src="assets/images/corbion/tb.jpg" alt="Portfolio-image"/>
-                  <div class="masonry-item-overlay">
-                    <div class="masonry-item-overlay-inner">
-                      <h2>Smart Device</h2>
-                      <p>Smart-Device for factory operators</p>
-                    </div>
-                  </div></a></div>
-            </li>
-            <li data-os-animation="fadeIn" data-os-animation-delay="0.2s" class="col-lg-6 os-animation">
-              <div class="masonry-item background-color-2"><a href="reach.html"><img src="assets/images/b_p_reach.jpg" alt="Portfolio-image"/>
-                  <div class="masonry-item-overlay">
-                    <div class="masonry-item-overlay-inner">
-                      <h2>De Kooktafel</h2>
-                      <p>Cooking-aid Smart-Table</p>
-                    </div>
-                  </div></a></div>
-            </li>
-            <li data-os-animation="fadeIn" data-os-animation-delay="0.2s" class="col-lg-6 os-animation">
-              <div class="masonry-item background-color-3"><a href="dochange.html"><img src="assets/images/b_p_dochange.jpg" alt="Portfolio-image"/>
-                  <div class="masonry-item-overlay">
-                    <div class="masonry-item-overlay-inner">
-                      <h2>DoChange</h2>
-                      <p>Dashboard for Researchers</p>
-                    </div>
-                  </div>
-                </a>
-              </div>
-            </li>
-            <li data-os-animation="fadeIn" data-os-animation-delay="0.3s" class="col-lg-6 os-animation">
-              <div class="masonry-item background-color-4"><a href="eventix.html"><img src="assets/images/b_p_eventix2.jpg" alt="Portfolio-image"/>
-                  <div class="masonry-item-overlay">
-                    <div class="masonry-item-overlay-inner">
-                      <h2>Alert Applet</h2>
-                      <p>Ticketshop Dashboard</p>
-                    </div>
-                  </div>
-                </a>
-              </div>
-            </li>
-
-            <li data-os-animation="fadeIn" data-os-animation-delay="0.4s" class="col-lg-6 os-animation">
-              <div class="masonry-item background-color-1"><a href="aac.html"><img src="assets/images/aac/tb.jpg" alt="Portfolio-image"/>
-                  <div class="masonry-item-overlay">
-                    <div class="masonry-item-overlay-inner">
-                      <h2>AAC</h2>
-                      <p>EMG-based AAC for people with ALS</p>
-                    </div>
-                  </div>
-                </a>
-              </div>
-            </li>
-
-            <li data-os-animation="fadeIn" data-os-animation-delay="0.3s" class="col-lg-6 os-animation">
-              <div class="masonry-item background-color-2"><a href="intel.html"><img src="assets/images/intel/tb.jpg" alt="Portfolio-image"/>
-                  <div class="masonry-item-overlay">
-                    <div class="masonry-item-overlay-inner">
-                      <h2>Multi-patient ICU Monitor</h2>
-                      <p>ICU monitor</p>
-                    </div>
-                  </div>
-                </a>
-              </div>
-            </li>
-          </ul>
         </div>
-      </div>
     </section>
+
     <section class="section section-black text-center">
       <div class="container">
         <div class="col-md-12 text-center">
