adding floating button

--- a/index.html
+++ b/index.html
@@ -147,8 +147,8 @@
                 <div class="masonry-item background-color-1"><a href="corbion.html"><img src="assets/images/corbion/tb.jpg" alt="Portfolio-image"/>
                     <div class="masonry-item-overlay">
                       <div class="masonry-item-overlay-inner">
-                        <h2>Smart Device</h2>
-                        <p>Smart-Device for factory operators</p>
+                        <h2>OpAssistant</h2>
+                        <p>Smart-Device for operators</p>
                       </div>
                     </div></a></div>
               </li>
@@ -227,7 +227,6 @@
             <p>Eindhoven, The Netherlands</p>
           </div>
         </div>
-        
         <div data-os-animation="fadeIn" data-os-animation-delay="0.1s" class="col-md-4 margin-top small-screen-margin-top os-animation">
           <div class="icon-block"><i class="icon-basic-keyboard"></i>
             <h4 style="color:white">EMAIL</h4>
@@ -242,6 +241,7 @@
         </div>
       </div>
     </section>
+
     <script src="assets/js/packages.js"></script>
     <script src="assets/js/theme.js"></script>
     <script src="assets/js/map.js"></script>
