--- a/aac.html
+++ b/aac.html
@@ -34,6 +34,7 @@
       <div class="row"><img src="assets/images/loader.gif" width="60" alt="Loader logo" class="loader"/>
       </div>
     </div>
+
     <section style="background-image: radial-gradient(circle at 50% 50%,rgba(0,0,0,0.4),rgba(0,0,0,1.0)),url(assets/images/aac/hero.jpg" class="header-introduction-small text-center background-image">
       <div class="container vertical-middle text-center">
         <div class="row section-head section-head-white">
@@ -160,7 +161,7 @@
               <div class="masonry-item background-color-1"><a href="corbion.html"><img src="assets/images/corbion/tb.jpg" alt="Portfolio-image"/>
                   <div class="masonry-item-overlay">
                     <div class="masonry-item-overlay-inner">
-                      <h2 style="padding-top: 3em; font-size: 1em;">Smart Device</h2>
+                      <h2 style="padding-top: 3em; font-size: 1em;">Op Assistant</h2>
                     </div>
                   </div></a></div>
             </li>
@@ -219,38 +220,35 @@
       </div>
     </section>
 
-    <!--footer>
+    <section class="section section-white text-center">
       <div class="container">
-        <div data-os-animation="fadeInUp" data-os-animation-delay="0s" class="col-md-12 text-center os-animation">
-          <div class="section-head"> 
-            <h4>NEWSLETTER</h4>
-            <p>Subscribe to our newsletter to receive news, updates	and the latest projects we are working on.</p>
+        <div class="col-md-12 text-center">
+          <div class="section-head">
+              <h3 style="padding-top: 0.1em; font-size: 6.0em;">CONTACT ME</p></h3>
+              <p>I'm looking for a full-time job. You can reach out via e-mail or phone.</p>
+              <img src="assets/images/section-decor-black.png" width="60" alt="Divider"/>
           </div>
         </div>
-        <div data-os-animation="fadeInUp" data-os-animation-delay="0s" class="col-md-12 margin-top margin-bottom os-animation">
-          <form class="newsletter-form text-center">
-            <input placeholder="YOUR EMAIL ADDRESS..." class="form-control"/>
-            <button type="submit">I'M IN</button>
-            <div class="col-md-12 text-center margin-top"><small>You have our word, no spam. Ever.</small></div>
-          </form>
-        </div>
-        <div class="col-md-12 margin-top">
-          <hr/>
-        </div>
-        <div class="col-md-6 text-left small-screen-text-center">
-          <div class="footer-message">
-            <p>2015 © AVOIR - Crafted by Andrewch</p>
+        <div data-os-animation="fadeIn" data-os-animation-delay="0s" class="col-md-4 margin-top os-animation">
+          <div class="icon-block"><i class="icon-basic-flag1"></i>
+            <h4>LOCATION</h4>
+            <p>Eindhoven, The Netherlands</p>
           </div>
         </div>
-        <div class="col-md-6 text-right small-screen-text-center">
-          <ul class="social-icons">
-            <li><a href="#">DRIBBBLE</a></li>
-            <li><a href="#">BEHANCE</a></li>
-            <li><a href="#">TWITTER</a></li>
-          </ul>
+        <div data-os-animation="fadeIn" data-os-animation-delay="0.1s" class="col-md-4 margin-top small-screen-margin-top os-animation">
+          <div class="icon-block"><i class="icon-basic-keyboard"></i>
+            <h4>EMAIL</h4>
+            <p>dtgmariano@gmail.com</p>
+          </div>
+        </div>
+        <div data-os-animation="fadeIn" data-os-animation-delay="0.2s" class="col-md-4 margin-top small-screen-margin-top os-animation">
+          <div class="icon-block"><i class="icon-basic-smartphone"></i>
+            <h4>PHONE</h4>
+            <p>+31 (06) 1452 4605</p>
+          </div>
         </div>
       </div>
-    </footer-->
+    </section>
     <script src="assets/js/packages.js"></script>
     <script src="assets/js/theme.js"></script>
     <script src="assets/js/map.js"></script>
