--- a/eventix.html
+++ b/eventix.html
@@ -242,6 +242,110 @@
         </div>
       </div>
     </footer-->
+    <section class="section section-black">
+      <div class="container-fluid">
+        <div class="col-md-12 text-center margin-bottom">
+            <div class="section-head">
+              <span style="font-size: 1.1em;">CHECK OTHER</span>
+              <h3 style="padding-top: 0.1em; font-size: 6.0em;">PROJECTS</p></h3>
+              <img src="assets/images/section-decor-black.png" width="60" alt="Divider"/>
+            </div>
+          </div>
+        <div class="col-md-10 col-md-offset-1">
+          <ul class="masonry-wrap">
+            <li data-os-animation="fadeIn" data-os-animation-delay="0.1s" class="col-lg-2 os-animation">
+              <div class="masonry-item background-color-1"><a href="corbion.html"><img src="assets/images/corbion/tb.jpg" alt="Portfolio-image"/>
+                  <div class="masonry-item-overlay">
+                    <div class="masonry-item-overlay-inner">
+                      <h2 style="padding-top: 3em; font-size: 1em;">Op Assistant</h2>
+                    </div>
+                  </div></a></div>
+            </li>
+            <li data-os-animation="fadeIn" data-os-animation-delay="0.2s" class="col-lg-2 os-animation">
+              <div class="masonry-item background-color-2"><a href="reach.html"><img src="assets/images/b_p_reach.jpg" alt="Portfolio-image"/>
+                  <div class="masonry-item-overlay">
+                    <div class="masonry-item-overlay-inner">
+                      <h2 style="padding-top: 3em; font-size: 1em;">De Kooktafel</h2>
+                    </div>
+                  </div></a></div>
+            </li>
+            <li data-os-animation="fadeIn" data-os-animation-delay="0.2s" class="col-lg-2 os-animation">
+              <div class="masonry-item background-color-3"><a href="dochange.html"><img src="assets/images/b_p_dochange.jpg" alt="Portfolio-image"/>
+                  <div class="masonry-item-overlay">
+                    <div class="masonry-item-overlay-inner">
+                      <h2 style="padding-top: 3em; font-size: 1em;">DoChange</h2>
+                    </div>
+                  </div>
+                </a>
+              </div>
+            </li>
+            <li data-os-animation="fadeIn" data-os-animation-delay="0.3s" class="col-lg-2 os-animation">
+              <div class="masonry-item background-color-4"><a href="eventix.html"><img src="assets/images/b_p_eventix2.jpg" alt="Portfolio-image"/>
+                  <div class="masonry-item-overlay">
+                    <div class="masonry-item-overlay-inner">
+                      <h2 style="padding-top: 3em; font-size: 1em;">Alert Applet</h2>
+                    </div>
+                  </div>
+                </a>
+              </div>
+            </li>
+
+            <li data-os-animation="fadeIn" data-os-animation-delay="0.4s" class="col-lg-2 os-animation">
+              <div class="masonry-item background-color-1"><a href="aac.html"><img src="assets/images/aac/tb.jpg" alt="Portfolio-image"/>
+                  <div class="masonry-item-overlay">
+                    <div class="masonry-item-overlay-inner">
+                      <h2 style="padding-top: 3em; font-size: 1em;">AAC for people with ALS</h2>
+                    </div>
+                  </div>
+                </a>
+              </div>
+            </li>
+
+            <li data-os-animation="fadeIn" data-os-animation-delay="0.3s" class="col-lg-2 os-animation">
+              <div class="masonry-item background-color-2"><a href="intel.html"><img src="assets/images/intel/tb.jpg" alt="Portfolio-image"/>
+                  <div class="masonry-item-overlay">
+                    <div class="masonry-item-overlay-inner">
+                      <h2 style="padding-top: 3em; font-size: 1em;">Multi-patient ICU Monitor</h2>
+                    </div>
+                  </div>
+                </a>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </section>
+
+    <section class="section section-white text-center">
+      <div class="container">
+        <div class="col-md-12 text-center">
+          <div class="section-head">
+              <h3 style="padding-top: 0.1em; font-size: 6.0em;">CONTACT ME</p></h3>
+              <p>I'm looking for a full-time job. You can reach out via e-mail or phone.</p>
+              <img src="assets/images/section-decor-black.png" width="60" alt="Divider"/>
+          </div>
+        </div>
+        <div data-os-animation="fadeIn" data-os-animation-delay="0s" class="col-md-4 margin-top os-animation">
+          <div class="icon-block"><i class="icon-basic-flag1"></i>
+            <h4>LOCATION</h4>
+            <p>Eindhoven, The Netherlands</p>
+          </div>
+        </div>
+        <div data-os-animation="fadeIn" data-os-animation-delay="0.1s" class="col-md-4 margin-top small-screen-margin-top os-animation">
+          <div class="icon-block"><i class="icon-basic-keyboard"></i>
+            <h4>EMAIL</h4>
+            <p>dtgmariano@gmail.com</p>
+          </div>
+        </div>
+        <div data-os-animation="fadeIn" data-os-animation-delay="0.2s" class="col-md-4 margin-top small-screen-margin-top os-animation">
+          <div class="icon-block"><i class="icon-basic-smartphone"></i>
+            <h4>PHONE</h4>
+            <p>+31 (06) 1452 4605</p>
+          </div>
+        </div>
+      </div>
+    </section>
+    
     <script src="assets/js/packages.js"></script>
     <script src="assets/js/theme.js"></script>
     <script src="assets/js/map.js"></script>
