--- a/index.html
+++ b/index.html
@@ -28,17 +28,10 @@
     <!-- MAIN STYLESHEETS-->
     <link rel="stylesheet" href="assets/css/bootstrap.css" type="text/css" media="all"/>
     <link rel="stylesheet" href="assets/css/theme.css" type="text/css" media="all"/>
-    
-  </head>
-  <!-- Global Site Tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-105775107-1"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments)};
-  gtag('js', new Date());
 
-  gtag('config', 'UA-105775107-1');
-</script> 
+  </head>
+  
+
   <body>
     <div class="loading text-center vertical-middle">
       <div class="row"><img src="assets/images/loader.gif" width="60" alt="Loader logo" class="loader"/>
@@ -256,6 +249,15 @@
     <script src="assets/js/theme.js"></script>
     <script src="assets/js/map.js"></script>
     <script src="assets/js/contact.js"></script>
+    !-- Global Site Tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-105775107-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments)};
+      gtag('js', new Date());
+
+      gtag('config', 'UA-105775107-1');
+    </script> 
     <script src="https://maps.googleapis.com/maps/api/js?sensor=false"></script><script type="text/javascript" src="assets/js/jquery.themepunch.tools.min.js"></script>
     <script type="text/javascript" src="assets/js/jquery.themepunch.revolution.min.js"></script>
     <script type="text/javascript" src="assets/js/slider-initialization.js"></script>
