--- a/aac.html
+++ b/aac.html
@@ -29,6 +29,7 @@
     <link rel="stylesheet" href="assets/css/bootstrap.css" type="text/css" media="all"/>
     <link rel="stylesheet" href="assets/css/theme.css" type="text/css" media="all"/>
     <link rel="stylesheet" href="assets/css/floatbtn.css" type="text/css" media="all"/>
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
   </head>
   <body>
     <div class="loading text-center vertical-middle">
