--- a/corbion.html
+++ b/corbion.html
@@ -49,19 +49,12 @@
         <nav class="main-navigation" data-back-btn-text="Back">
           <ul class="menu">
             <li class="delay-0"><a href="index.html">Home</a></li>
-            <li class="menu-item-has-children current-menu-item delay-1">
-              <a href="#"><i class="fa fa-arrow-right" aria-hidden="true"></i>More Projects</a>
-              <ul class="sub-menu">
-                <li class="current-menu-item"></li>
-                <li><a href="corbion.html">Smart-Device for Operators</a></li>
-                <li><a href="reach.html">De Kooktafel</a></li>
-                <li><a href="dochange.html">DoChange Dashboard</a></li>
-                <li><a href="eventix.html">Eventix Dashboard</a></li>
-                <li><a href="aac.html">EMG-based AAC</a></li>
-                <li><a href="intel.html">Multi-patient ICU Monitor</a></li>
-              </ul>
-            </li>
-            
+            <li class="delay-1"><a href="corbion.html">Smart-Device for Operators</a></li>
+            <li class="delay-2"><a href="reach.html">De Kooktafel</a></li>
+            <li class="delay-3"><a href="dochange.html">DoChange Dashboard</a></li>
+            <li class="delay-4"><a href="eventix.html">Eventix Dashboard</a></li>
+            <li class="delay-5"><a href="aac.html">EMG-based AAC</a></li>
+            <li class="delay-6"><a href="intel.html">Multi-patient ICU Monitor</a></li>
           </ul><!-- .menu -->
         </nav><!-- .main-navigation -->
       </div>
@@ -333,6 +326,15 @@
     <script src="assets/js/map.js"></script>
     <script src="assets/js/contact.js"></script>
     <script src="assets/js/floatbtn.js"></script>
+    !-- Global Site Tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-105775107-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments)};
+      gtag('js', new Date());
+
+      gtag('config', 'UA-105775107-1');
+    </script> 
     <script src="https://maps.googleapis.com/maps/api/js?sensor=false"></script>
   </body>
 </html>
