--- a/aac.html
+++ b/aac.html
@@ -51,19 +51,12 @@
         <nav class="main-navigation" data-back-btn-text="Back">
           <ul class="menu">
             <li class="delay-0"><a href="index.html">Home</a></li>
-            <li class="menu-item-has-children current-menu-item delay-1">
-              <a href="#"><i class="fa fa-arrow-right" aria-hidden="true"></i>More Projects</a>
-              <ul class="sub-menu">
-                <li class="current-menu-item"></li>
-                <li><a href="corbion.html">Smart-Device for Operators</a></li>
-                <li><a href="reach.html">De Kooktafel</a></li>
-                <li><a href="dochange.html">DoChange Dashboard</a></li>
-                <li><a href="eventix.html">Eventix Dashboard</a></li>
-                <li><a href="aac.html">EMG-based AAC</a></li>
-                <li><a href="intel.html">Multi-patient ICU Monitor</a></li>
-              </ul>
-            </li>
-            
+            <li class="delay-1"><a href="corbion.html">Smart-Device for Operators</a></li>
+            <li class="delay-2"><a href="reach.html">De Kooktafel</a></li>
+            <li class="delay-3"><a href="dochange.html">DoChange Dashboard</a></li>
+            <li class="delay-4"><a href="eventix.html">Eventix Dashboard</a></li>
+            <li class="delay-5"><a href="aac.html">EMG-based AAC</a></li>
+            <li class="delay-6"><a href="intel.html">Multi-patient ICU Monitor</a></li>
           </ul><!-- .menu -->
         </nav><!-- .main-navigation -->
       </div>
