--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
     <meta name="msapplication-TileColor" content="#00aba9">
     <meta name="msapplication-TileImage" content="/mstile-144x144.png">
     <meta name="theme-color" content="#ffffff">
-    <!-- Google Fonts--><link href='https://fonts.googleapis.com/css?family=Josefin+Sans' rel='stylesheet' type='text/css'>
+    <!-- Google Fonts-->
+    <link href='https://fonts.googleapis.com/css?family=Josefin+Sans' rel='stylesheet' type='text/css'>
     <!-- MAIN STYLESHEETS-->
     <link rel="stylesheet" href="assets/css/bootstrap.css" type="text/css" media="all"/>
     <link rel="stylesheet" href="assets/css/theme.css" type="text/css" media="all"/>
