--- a/intel.html
+++ b/intel.html
@@ -28,12 +28,37 @@
     <!-- MAIN STYLESHEETS-->
     <link rel="stylesheet" href="assets/css/bootstrap.css" type="text/css" media="all"/>
     <link rel="stylesheet" href="assets/css/theme.css" type="text/css" media="all"/>
+    <link rel="stylesheet" href="assets/css/floatbtn.css" type="text/css" media="all"/>
   </head>
   <body>
     <div class="loading text-center vertical-middle">
       <div class="row"><img src="assets/images/loader.gif" width="60" alt="Loader logo" class="loader"/>
       </div>
     </div>
+    <header class="floating-header">
+      <div class="floating-menu-btn">
+        <div class="floating-menu-toggle-wrap">
+          <div class="floating-menu-toggle">
+            <span class="bar"></span>
+            <span class="bar"></span>
+            <span class="bar"></span>
+          </div>
+        </div>
+      </div>
+      <div class="main-navigation-wrap">
+        <nav class="main-navigation" data-back-btn-text="Back">
+          <ul class="menu">
+            <li class="delay-0"><a href="index.html">Home</a></li>
+            <li class="delay-1"><a href="corbion.html">Smart-Device for Operators</a></li>
+            <li class="delay-2"><a href="reach.html">De Kooktafel</a></li>
+            <li class="delay-3"><a href="dochange.html">DoChange Dashboard</a></li>
+            <li class="delay-4"><a href="eventix.html">Eventix Dashboard</a></li>
+            <li class="delay-5"><a href="aac.html">EMG-based AAC</a></li>
+            <li class="delay-6"><a href="intel.html">Multi-patient ICU Monitor</a></li>
+          </ul><!-- .menu -->
+        </nav><!-- .main-navigation -->
+      </div>
+    </header>
     <section style="background-image: radial-gradient(circle at 50% 50%,rgba(0,0,0,0.4),rgba(0,0,0,1.0)),url(assets/images/intel/hero.jpg" class="header-introduction-small text-center background-image">
       <div class="container vertical-middle text-center">
         <div class="row section-head section-head-white">
@@ -300,6 +325,16 @@
     <script src="assets/js/theme.js"></script>
     <script src="assets/js/map.js"></script>
     <script src="assets/js/contact.js"></script>
+    <script src="assets/js/floatbtn.js"></script>
+    !-- Global Site Tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-105775107-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments)};
+      gtag('js', new Date());
+
+      gtag('config', 'UA-105775107-1');
+    </script> 
     <script src="https://maps.googleapis.com/maps/api/js?sensor=false"></script>
   </body>
 </html>
