--- a/reach.html
+++ b/reach.html
@@ -28,62 +28,37 @@
     <!-- MAIN STYLESHEETS-->
     <link rel="stylesheet" href="assets/css/bootstrap.css" type="text/css" media="all"/>
     <link rel="stylesheet" href="assets/css/theme.css" type="text/css" media="all"/>
+    <link rel="stylesheet" href="assets/css/floatbtn.css" type="text/css" media="all"/>
   </head>
   <body>
     <div class="loading text-center vertical-middle">
       <div class="row"><img src="assets/images/loader.gif" width="60" alt="Loader logo" class="loader"/>
       </div>
     </div>
-    <!--header class="main-navigation">
-      <div class="container-fluid">
-        <div class="col-md-2">
-          <div id="navicon">
-            <div class="bar"></div>
-            <div class="bar"></div>
-            <div class="bar"></div>
+    <header class="floating-header">
+      <div class="floating-menu-btn">
+        <div class="floating-menu-toggle-wrap">
+          <div class="floating-menu-toggle">
+            <span class="bar"></span>
+            <span class="bar"></span>
+            <span class="bar"></span>
           </div>
         </div>
-        <div class="col-md-10">
-          <nav>
-            <ul role="menu">
-              <li><a href="index.html">HOME</a></li>
-              <li><a href="about.html">ABOUT</a></li>
-              <li class="dropdown"><a data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" class="dropdown-toggle"> PROJECTS <span class="dropdown-icon">
-                    <svg width="10" height="7">
-                      <g></g>
-                      <line fill="none" stroke="#fdfdfd" x1="-4.54458" y1="-5.33302" x2="5.38279" y2="4.59435"></line>
-                      <line fill="none" stroke="#fdfdfd" x1="4.67324" y1="4.59752" x2="14.81695" y2="-5.54619"></line>
-                    </svg></span></a>
-                <ul class="dropdown-menu">
-                  <li><a href="corbion.html">SMART DEVICE FOR OPERATORS</a></li>
-                  <li><a href="reach.html">COOKING-AID SMART-TABLE</a></li>
-                  <li><a href="dochange.html">DASHBOARD FOR RESEARCHERS</a></li>
-                  <li><a href="eventix.html">TICKETSHOP DASHBOARD</a></li>
-                  <li><a href="aac.html">EMG-BASED AAC FOR ALS USERS</a></li>
-                </ul>
-              </li>
-              <li><a href="t_contact.html">CONTACT</a></li>
-            </ul>
-          </nav>
-        </div>
-        <div class="mobile-navigation vertical-middle text-center">
-          <ul role="menu" class="text-center">
-            <li><a href="home.html">HOME</a></li>
-            <li><a href="about.html">ABOUT</a></li>
-            <li><a href="projects.html" class="mobile-dropdown">PROJECTS</a>
-              <div class="content">
-                <a href="corbion.html">SMART DEVICE FOR OPERATORS</a>
-                <a href="reach.html">COOKING-AID SMART-TABLE</a>
-                <a href="dochange">DASHBOARD FOR RESEARCHERS</a>
-                <a href="eventix.html">TICKETSHOP DASHBOARD</a>
-                <a href="aac.html">EMG-BASED AAC FOR ALS USERS</a>
-              </div>
-            </li>
-            <li><a href="contact.html">CONTACT</a></li>
-          </ul>
-        </div>
       </div>
-    </header-->
+      <div class="main-navigation-wrap">
+        <nav class="main-navigation" data-back-btn-text="Back">
+          <ul class="menu">
+            <li class="delay-0"><a href="index.html">Home</a></li>
+            <li class="delay-1"><a href="corbion.html">Smart-Device for Operators</a></li>
+            <li class="delay-2"><a href="reach.html">De Kooktafel</a></li>
+            <li class="delay-3"><a href="dochange.html">DoChange Dashboard</a></li>
+            <li class="delay-4"><a href="eventix.html">Eventix Dashboard</a></li>
+            <li class="delay-5"><a href="aac.html">EMG-based AAC</a></li>
+            <li class="delay-6"><a href="intel.html">Multi-patient ICU Monitor</a></li>
+          </ul><!-- .menu -->
+        </nav><!-- .main-navigation -->
+      </div>
+    </header>
     <section style="background-image: radial-gradient(circle at 50% 50%,rgba(0,0,0,0.4),rgba(0,0,0,1.0)),url(assets/images/reach/hero.jpg" class="header-introduction-small text-center background-image">
       <div class="container vertical-middle text-center">
         <div class="row section-head section-head-white">
@@ -372,11 +347,21 @@
         </div>
       </div>
     </section>
-    
+
     <script src="assets/js/packages.js"></script>
     <script src="assets/js/theme.js"></script>
     <script src="assets/js/map.js"></script>
     <script src="assets/js/contact.js"></script>
+    <script src="assets/js/floatbtn.js"></script>
+    !-- Global Site Tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-105775107-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments)};
+      gtag('js', new Date());
+
+      gtag('config', 'UA-105775107-1');
+    </script> 
     <script src="https://maps.googleapis.com/maps/api/js?sensor=false"></script>
   </body>
 </html>
