--- a/eventix.html
+++ b/eventix.html
@@ -126,7 +126,7 @@
       </div>
     </section>
 
-    <!section class="section section-white">
+    <section class="section section-white">
       <div class="container">
         <div class="col-md-12 text-center">
           <div class="section-head">
