--- a/corbion.html
+++ b/corbion.html
@@ -326,7 +326,7 @@
     <script src="assets/js/map.js"></script>
     <script src="assets/js/contact.js"></script>
     <script src="assets/js/floatbtn.js"></script>
-    !-- Global Site Tag (gtag.js) - Google Analytics -->
+    <!-- Global Site Tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-105775107-1"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
