--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
     <script src="assets/js/theme.js"></script>
     <script src="assets/js/map.js"></script>
     <script src="assets/js/contact.js"></script>
-    !-- Global Site Tag (gtag.js) - Google Analytics -->
+    <!-- Global Site Tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-105775107-1"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
