--- a/intel.html
+++ b/intel.html
@@ -185,38 +185,6 @@
       </div>
     </section-->
 
-    <!--footer>
-      <div class="container">
-        <div data-os-animation="fadeInUp" data-os-animation-delay="0s" class="col-md-12 text-center os-animation">
-          <div class="section-head"> 
-            <h4>NEWSLETTER</h4>
-            <p>Subscribe to our newsletter to receive news, updates	and the latest projects we are working on.</p>
-          </div>
-        </div>
-        <div data-os-animation="fadeInUp" data-os-animation-delay="0s" class="col-md-12 margin-top margin-bottom os-animation">
-          <form class="newsletter-form text-center">
-            <input placeholder="YOUR EMAIL ADDRESS..." class="form-control"/>
-            <button type="submit">I'M IN</button>
-            <div class="col-md-12 text-center margin-top"><small>You have our word, no spam. Ever.</small></div>
-          </form>
-        </div>
-        <div class="col-md-12 margin-top">
-          <hr/>
-        </div>
-        <div class="col-md-6 text-left small-screen-text-center">
-          <div class="footer-message">
-            <p>2015 © AVOIR - Crafted by Andrewch</p>
-          </div>
-        </div>
-        <div class="col-md-6 text-right small-screen-text-center">
-          <ul class="social-icons">
-            <li><a href="#">DRIBBBLE</a></li>
-            <li><a href="#">BEHANCE</a></li>
-            <li><a href="#">TWITTER</a></li>
-          </ul>
-        </div>
-      </div>
-    </footer-->
     <section class="section section-black">
       <div class="container-fluid">
         <div class="col-md-12 text-center margin-bottom">
@@ -326,7 +294,7 @@
     <script src="assets/js/map.js"></script>
     <script src="assets/js/contact.js"></script>
     <script src="assets/js/floatbtn.js"></script>
-    !-- Global Site Tag (gtag.js) - Google Analytics -->
+    <!-- Global Site Tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-105775107-1"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
