--- a/aac.html
+++ b/aac.html
@@ -123,7 +123,7 @@
           </div>
         </div>
         <div data-os-animation="fadeIn" data-os-animation-delay="1.0s" class="col-md-12 text-block text-center">
-          <h3 class="os-animation">ABOUT THE CLIENT AND THEIR PROBLEM</h3>
+          <h3 class="os-animation">ABOUT THE CLIENT AND THE CASE</h3>
           <p class="os-animation text-left" style="font-size: 1.4em; padding-top: 1.2em;">According to the WHO, over 1 billion people globally experience disability. From those, a significant number have severe motor dysfunction due to a variaty of causes, such as Spinal Cord Injury, Amyotrophic Lateral Sclerosis (ALS), and so forth. In most cases, people have severe speech impairment, drastically reducing their independence. Health organization and scientific research has proved that rehabilitation and assistive devices can enable people with disabilities to became more independent and increase their quality of life. This case presents the design of a communication-aid device for an individual with ALS.</p>
           <div class="portfolio-single-content">
             <div data-os-animation="fadeIn" data-os-animation-delay="0.1s" class="col-md-12 margin-top os-animation">
