--- a/corbion.html
+++ b/corbion.html
@@ -120,7 +120,7 @@
           </div>
         </div>
         <div data-os-animation="fadeIn" data-os-animation-delay="1.0s" class="col-md-12 text-block text-center">
-          <h3 class="os-animation">ABOUT THE CLIENT AND THEIR PROBLEM</h3>
+          <h3 class="os-animation">ABOUT THE CLIENT AND THE CASE</h3>
           <p class="os-animation text-left" style="font-size: 1.4em; padding-top: 1.2em;">Eventix is an online e-ticket solution for event organizers all around the world. Their customers are festivals, theaters, business and sports organizers. One of their products is the desktop dashboard. The dashboard provides to organizers information about sales, insights from marketing, demographics about the audience, etc. These data are fundamental to support business decisions. Therefore, their customers should have a great experience while using this feature. Eventix asked my team to design a dashboard with a better experience for customers that would also reduce the need for supports during and after the sales stage.</p>
           <iframe class="col-sm-12 text-center" style="padding-top: 2em;" width="600" height="700" src="https://www.youtube.com/embed/rS2n4u7SR1U" frameborder="0" allowfullscreen style="padding-bottom: 2em;"></iframe>
       </div>
