--- a/index.html
+++ b/index.html
@@ -29,13 +29,12 @@
     <!-- MAIN STYLESHEETS-->
     <link rel="stylesheet" href="assets/css/bootstrap.css" type="text/css" media="all"/>
     <link rel="stylesheet" href="assets/css/theme.css" type="text/css" media="all"/>
-
   </head>
   
-
   <body>
     <div class="loading text-center vertical-middle">
-      <div class="row"><img src="assets/images/loader.gif" width="60" alt="Loader logo" class="loader"/>
+      <div class="row">
+        <img src="assets/images/loader.gif" width="60" alt="Loader logo" class="loader"/>
       </div>
     </div>
     
@@ -46,7 +45,7 @@
             <h2 style="line-height: 1.0em; font-size:6em;">DANIEL MARIANO</h2>
           </div>
           <div class="text-block">
-            <h2 data-os-animation="fadeInUp" data-os-animation-delay="0s" class="cd-headline letters type os-animation"><span>UX&nbsp;</span><span class="cd-words-wrapper"><b class="is-visible">DESIGNER</b><b>TEAM PLAYER</b><b>RESEARCHER</b><b>EXPLORER</b><b>HACKER</b></span></h2>
+            <h3 data-os-animation="fadeInUp" data-os-animation-delay="0.1s" class="cd-headline letters type os-animation"><span>UX&nbsp;</span><span class="cd-words-wrapper"><b class="is-visible">DESIGNER</b><b>TEAM PLAYER</b><b>RESEARCHER</b><b>EXPLORER</b><b>HACKER</b></span></h3>
             <img src="assets/images/section-decor-black.png" width="60" alt="Divider"/>
             <p class="lead os-animation margin-top">I am a User Experience Designer with a background in Biomedical and Electrical Engineering, based in The Netherlands.</p>
             <p class="lead os-animation">With a user-centered approach, I am inspired to explore new ideas that can empower people's lives. My purpose as a UX professional is to design successful products, satisfying both users' needs and business' expectations.</p>
@@ -54,12 +53,12 @@
           </div>
         </div>
     </section>
-   <section class="section section-black">
+    <section class="section section-black">
       <div class="container">
         <div class="col-md-12 text-center margin-bottom">
             <div class="section-head">
               <span style="font-size: 1.1em;">UX DESIGN &amp; DEV</span>
-              <h3 style="padding-top: 0.1em; font-size: 6.0em;">SKILLS</p></h3>
+              <h2 style="padding-top: 0.1em; font-size: 6.0em;">SKILLS</p></h2>
               <img src="assets/images/section-decor-white.png" width="60" alt="Divider"/>
             </div>
           </div>
@@ -81,7 +80,6 @@
               <h4>DATA</h4>
               <p>Data Analysis, Data Visualization, Hypothesis Testing, Pattern Recognition, Processing, Statistics</p>
             </div>
-            
           </div>
         </div>
       </div>
@@ -92,7 +90,7 @@
           <div class="col-md-12 text-center margin-bottom">
               <div class="section-head">
                 <span style="font-size: 1.1em;">HERE ARE SOME OF MY</span>
-                <h3 style="padding-top: 0.1em; font-size: 6.0em;">PROJECTS</p></h3>
+                <h2 style="padding-top: 0.1em; font-size: 6.0em;">PROJECTS</p></h2>
                 <img src="assets/images/section-decor-black.png" width="60" alt="Divider"/>
               </div>
             </div>
@@ -171,7 +169,7 @@
       <div class="container">
         <div class="col-md-12 text-center">
           <div class="section-head">
-              <h3 style="padding-top: 0.1em; font-size: 6.0em;">CONTACT ME</p></h3>
+              <h2 style="padding-top: 0.1em; font-size: 6.0em;">CONTACT ME</p></h2>
               <p>I'm looking for a full-time job. You can reach out via e-mail or phone.</p>
               <img src="assets/images/section-decor-white.png" width="60" alt="Divider"/>
           </div>
