--- a/reach.html
+++ b/reach.html
@@ -120,7 +120,7 @@
           </div>
         </div>
         <div data-os-animation="fadeIn" data-os-animation-delay="1.0s" class="col-md-12 text-block text-center">
-          <h3 class="os-animation">ABOUT THE CLIENT AND THEIR PROBLEM</h3>
+          <h3 class="os-animation">ABOUT THE CLIENT AND THE CASE</h3>
           <p class="os-animation text-left" style="font-size: 1.4em; padding-top: 1.2em;">Reach 2020 is an European Consortium that aims to help elderly by focusing on stimulating healthy eating among seniors.
            The stakeholders of the projects requested my team to research a particular group of seniors in Eindhoven. These seniors participate in a weekly cooking activity at the Summa College. Further more, the stakeholders asked my team to develop a digital prototype for a smart table that would aid seniors to cook and socialize. The interactive table, built by researchers of the Technical University of München.</p>
           <div class="portfolio-single-content">
