--- a/dochange.html
+++ b/dochange.html
@@ -120,7 +120,7 @@
           </div>
         </div>
         <div data-os-animation="fadeIn" data-os-animation-delay="1.0s" class="col-md-12 text-block text-center">
-          <h3 class="os-animation">ABOUT THE CLIENT AND THEIR PROBLEM</h3>
+          <h3 class="os-animation">ABOUT THE CLIENT AND THE CASE</h3>
           <p class="os-animation text-left" style="font-size: 1.4em; padding-top: 1.2em;">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborume</p>
           <iframe class="col-sm-12 text-center" style="padding-top: 2em;" width="600" height="700" src="https://www.youtube.com/embed/rS2n4u7SR1U" frameborder="0" allowfullscreen style="padding-bottom: 2em;"></iframe>
       </div>
