last tb for aac

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
               </li>
 
               <li data-os-animation="fadeIn" data-os-animation-delay="0.4s" class="col-lg-6 os-animation">
-                <div class="masonry-item background-color-1"><a href="aac.html"><img src="assets/images/aac/tb.jpg" alt="Portfolio-image"/>
+                <div class="masonry-item background-color-1"><a href="aac.html"><img src="assets/images/aac/tb2.jpg" alt="Portfolio-image"/>
                     <div class="masonry-item-overlay">
                       <div class="masonry-item-overlay-inner">
                         <h2>AAC for people with ALS</h2>
