--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <div class="container">
         <div class="col-md-12 text-center margin-top padding-top">
           <div class="section-head">
-            <h2 style="line-height: 1.0em; font-size:6em;">DANIEL MARIANO</h2>
+            <h2>DANIEL MARIANO</h2>
           </div>
           <div class="text-block">
             <h3 data-os-animation="fadeInUp" data-os-animation-delay="0.1s" class="cd-headline letters type os-animation"><span>UX&nbsp;</span><span class="cd-words-wrapper"><b class="is-visible">DESIGNER</b><b>TEAM PLAYER</b><b>RESEARCHER</b><b>EXPLORER</b><b>HACKER</b></span></h3>
@@ -58,7 +58,7 @@
         <div class="col-md-12 text-center margin-bottom">
             <div class="section-head">
               <span style="font-size: 1.1em;">UX DESIGN &amp; DEV</span>
-              <h2 style="padding-top: 0.1em; font-size: 6.0em;">SKILLS</p></h2>
+              <h2 style="padding-top: 0.1em;">SKILLS</p></h2>
               <img src="assets/images/section-decor-white.png" width="60" alt="Divider"/>
             </div>
           </div>
@@ -90,7 +90,7 @@
           <div class="col-md-12 text-center margin-bottom">
               <div class="section-head">
                 <span style="font-size: 1.1em;">HERE ARE SOME OF MY</span>
-                <h2 style="padding-top: 0.1em; font-size: 6.0em;">PROJECTS</p></h2>
+                <h2 style="padding-top: 0.1em;">PROJECTS</p></h2>
                 <img src="assets/images/section-decor-black.png" width="60" alt="Divider"/>
               </div>
             </div>
@@ -169,7 +169,7 @@
       <div class="container">
         <div class="col-md-12 text-center">
           <div class="section-head">
-              <h2 style="padding-top: 0.1em; font-size: 6.0em;">CONTACT ME</p></h2>
+              <h2>CONTACT ME</p></h2>
               <p>I'm looking for a full-time job. You can reach out via e-mail or phone.</p>
               <img src="assets/images/section-decor-white.png" width="60" alt="Divider"/>
           </div>
