--- a/aac.html
+++ b/aac.html
@@ -77,7 +77,7 @@
       <div class="container">
         <div class="col-md-12 text-center">
           <div class="section-head">
-            <h2 style="line-height: 1.05em; font-size:6em;">DESIGNING FOR A AAC USER WITH ALS</h2>
+            <h2 style="line-height: 1.05em;">DESIGNING FOR A AAC USER WITH ALS</h2>
             <img src="assets/images/section-decor-black.png" width="40" alt="Divider"/>
           </div>
           <div data-os-animation="fadeIn" data-os-animation-delay="0s" class="col-md-4 margin-top os-animation">
@@ -118,7 +118,7 @@
       <div class="container">
         <div class="col-md-12 text-center">
           <div class="section-head">
-            <h2 style="line-height: 1.05em; font-size:6em;">BRIEFING</h2>
+            <h2 style="line-height: 1.05em;">BRIEFING</h2>
             <img src="assets/images/section-decor-black.png" width="40" alt="Divider"/>
           </div>
         </div>
@@ -137,7 +137,7 @@
       <div class="container">
         <div class="col-md-12 text-center">
           <div class="section-head">
-            <h2 style="line-height: 1.05em; font-size:6em;">EMG-BASED AAC</h2>
+            <h2 style="line-height: 1.05em;">EMG-BASED AAC</h2>
             <img src="assets/images/section-decor-black.png" width="40" alt="Divider"/>
           </div>
         </div>
@@ -162,7 +162,7 @@
       <div class="container">
         <div class="col-md-12 text-center">
           <div class="section-head">
-            <h2 style="line-height: 1.05em; font-size:6em;">DESIGN OUTCOMES</h2>
+            <h2 style="line-height: 1.05em;">DESIGN OUTCOMES</h2>
             <img src="assets/images/section-decor-black.png" width="40" alt="Divider"/>
           </div>
         </div>
@@ -251,7 +251,7 @@
       <div class="container">
         <div class="col-md-12 text-center">
           <div class="section-head">
-              <h3 style="padding-top: 0.1em; font-size: 6.0em;">CONTACT ME</p></h3>
+              <h3 style="padding-top: 0.1em;">CONTACT ME</p></h3>
               <p>I'm looking for a full-time job. You can reach out via e-mail or phone.</p>
               <img src="assets/images/section-decor-black.png" width="60" alt="Divider"/>
           </div>
