--- a/intel.html
+++ b/intel.html
@@ -74,7 +74,7 @@
       <div class="container">
         <div class="col-md-12 text-center">
           <div class="section-head">
-            <h2 style="line-height: 1.05em; font-size:6em;">DESIGNING A MULTI-PATIENT ICU MONITOR</h2>
+            <h2 style="line-height: 1.05em; ">DESIGNING A MULTI-PATIENT ICU MONITOR</h2>
             <img src="assets/images/section-decor-black.png" width="40" alt="Divider"/>
           </div>
           <div data-os-animation="fadeIn" data-os-animation-delay="0s" class="col-md-4 margin-top os-animation">
@@ -115,7 +115,7 @@
       <div class="container">
         <div class="col-md-12 text-center">
           <div class="section-head">
-            <h2 style="line-height: 1.05em; font-size:6em;">BRIEFING</h2>
+            <h2 style="line-height: 1.05em;">BRIEFING</h2>
             <img src="assets/images/section-decor-black.png" width="40" alt="Divider"/>
           </div>
         </div>
@@ -130,7 +130,7 @@
       <div class="container">
         <div class="col-md-12 text-center">
           <div class="section-head">
-            <h2 style="line-height: 1.05em; font-size:6em;">RESEARCH</h2>
+            <h2 style="line-height: 1.05em;">RESEARCH</h2>
             <img src="assets/images/section-decor-black.png" width="40" alt="Divider"/>
           </div>
         </div>
@@ -149,7 +149,7 @@
       <div class="container">
         <div class="col-md-12 text-center">
           <div class="section-head">
-            <h2 style="line-height: 1.05em; font-size:6em;">ALERT APPLET & NOTIFICATION FEED</h2>
+            <h2 style="line-height: 1.05em; ">ALERT APPLET & NOTIFICATION FEED</h2>
             <img src="assets/images/section-decor-black.png" width="40" alt="Divider"/>
           </div>
         </div>
@@ -174,7 +174,7 @@
       <div class="container">
         <div class="col-md-12 text-center">
           <div class="section-head">
-            <h2 style="line-height: 1.05em; font-size:6em;">DESIGN OUTCOMES</h2>
+            <h2 style="line-height: 1.05em;">DESIGN OUTCOMES</h2>
             <img src="assets/images/section-decor-black.png" width="40" alt="Divider"/>
           </div>
         </div>
