--- a/reach.html
+++ b/reach.html
@@ -74,7 +74,7 @@
       <div class="container">
         <div class="col-md-12 text-center">
           <div class="section-head">
-            <h2 style="line-height: 1.05em; font-size:6em;">DE KOOKTAFEL: A COOKING-AID SMART-TABLE</h2>
+            <h2 style="line-height: 1.05em; ">DE KOOKTAFEL: A COOKING-AID SMART-TABLE</h2>
             <img src="assets/images/section-decor-black.png" width="40" alt="Divider"/>
           </div>
           <div data-os-animation="fadeIn" data-os-animation-delay="0s" class="col-md-4 margin-top os-animation">
@@ -115,7 +115,7 @@
       <div class="container">
         <div class="col-md-12 text-center">
           <div class="section-head">
-            <h2 style="line-height: 1.05em; font-size:6em;">BRIEFING</h2>
+            <h2 style="line-height: 1.05em; ">BRIEFING</h2>
             <img src="assets/images/section-decor-black.png" width="40" alt="Divider"/>
           </div>
         </div>
@@ -135,7 +135,7 @@
       <div class="container">
         <div class="col-md-12 text-center">
           <div class="section-head">
-            <h2 style="line-height: 1.05em; font-size:6em;">USER RESEARCH</h2>
+            <h2 style="line-height: 1.05em;">USER RESEARCH</h2>
             <img src="assets/images/section-decor-black.png" width="40" alt="Divider"/>
           </div>
         </div>
@@ -157,7 +157,7 @@
       <div class="container">
         <div class="col-md-12 text-center">
           <div class="section-head">
-            <h2 style="line-height: 1.05em; font-size:6em;">DESIGN SPRINT</h2>
+            <h2 style="line-height: 1.05em;">DESIGN SPRINT</h2>
             <img src="assets/images/section-decor-black.png" width="40" alt="Divider"/>
           </div>
         </div>
@@ -179,7 +179,7 @@
       <div class="container">
         <div class="col-md-12 text-center">
           <div class="section-head">
-            <h2 style="line-height: 1.05em; font-size:6em;">DE KOOKFAFEL</h2>
+            <h2 style="line-height: 1.05em;">DE KOOKFAFEL</h2>
             <img src="assets/images/section-decor-black.png" width="40" alt="Divider"/>
           </div>
         </div>
@@ -201,7 +201,7 @@
       <div class="container">
         <div class="col-md-12 text-center">
           <div class="section-head">
-            <h2 style="line-height: 1.05em; font-size:6em;">DESIGN OUTCOMES</h2>
+            <h2 style="line-height: 1.05em;">DESIGN OUTCOMES</h2>
             <img src="assets/images/section-decor-black.png" width="40" alt="Divider"/>
           </div>
         </div>
