--- a/index.html
+++ b/index.html
@@ -141,8 +141,8 @@
                 <div class="masonry-item background-color-1"><a href="aac.html"><img src="assets/images/aac/tb2.jpg" alt="Portfolio-image"/>
                     <div class="masonry-item-overlay">
                       <div class="masonry-item-overlay-inner">
-                        <h2>AAC for people with ALS</h2>
-                        <p>EMG-based AAC for people with ALS</p>
+                        <h2>EMG-based AAC</h2>
+                        <p>AAC for people with ALS</p>
                       </div>
                     </div>
                   </a>
